k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fasttest-app
  namespace: fasttest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fasttest
  template:
    metadata:
      labels:
        app: fasttest
    spec:
      containers:
      - name: fasttest-app
        image: hub.docker.com/repository/docker/instarlinz/fasttest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
