k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fasttest-app
  namespace: fasttest
spec:
  type: ClusterIP
  selector:
    app: fasttest
  ports:
    - port: 3000
      targetPort: 3000
