k8s/app-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fasttest-ingress-prod
  namespace: fasttest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - instarlin.com
    secretName: fasttest-tls
  rules:
  - host: instarlin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fasttest-app
            port:
              number: 3000
